navbar been fixed on mobile size

--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -55,13 +55,13 @@
 
             .logo {
                 img{
-                width: 130px;
-                height: auto;
-                margin-top: -19px;
-                @include media-size(desktop) {
-                    margin-top: 0px;
-               }
-             }
+                    width: 130px;
+                    height: auto;
+                    margin-top: -19px;
+                    @include media-size(desktop) {
+                        margin-top: 0px;
+                   }
+                 }
             }
         }
 
@@ -89,17 +89,21 @@
                 height: 2px;
                 transition: all 0.5s;
             }
+            @include media-size(desktop) {
+                &::after {
+                bottom: -30px;
+            }
+           }
 
             &:hover {
                 color: $--secondary-color-hover !important;
                 background-color: transparent !important;
                 &::after {
-                    width: 30%;
+                    width: 10%;
                 }
                @include media-size(desktop) {
                     &::after {
                     width: 100%;
-                    bottom: -30px;
                 }
                }
                 
